fixed spacing on server.py added checks and redirects if comment or posts tried to submit with no content, added some styling

--- a/SQL+FLASK/the_wall/static/style.css
+++ b/SQL+FLASK/the_wall/static/style.css
@@ -84,6 +84,9 @@ input{
     box-shadow: 2px 2px;
     color: lightgreen;
 }
+#content h4{
+    margin-left: 25px;
+}
 
 #posts{
     margin-left: 25px;
@@ -109,7 +112,9 @@ input{
     width: 600px;
     margin-left: 40px;
 }
-
+#posts h3{
+    margin-top: 90px;
+}
 
 
 h4{
